--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
+.leftTopNav {
+	display: inline-block;
+	padding: 10px;
+	border: 1px solid black;
+
+}
+
+.leftTopNav button {
+	border: none;
+	background: none;
+}
+
+.rightTopNav {
+	float: right;
+	padding: 10px;
+	border: 1px solid black;
+}
+
+.rightTopNav button {
+	border: none;
+	background: none;
+
+
+}
+
+.apps {
+
+}
+
 .container {
 	position: absolute;
 	top: 36%;
@@ -26,11 +55,10 @@
 	height: 45px;
 	border-radius: 25px;
 	outline: none; 	/*removes square outline */
-	background-image: url('outline_search_black_24dp.png');
+	background-image: url('images/outline_search_black_24dp.png');
 	background-repeat: no-repeat;
 	background-position: left center;
 	padding-left: 30px;
-	
 	font-size: 16px; 
 }
 
