--- a/style.css
+++ b/style.css
@@ -1,63 +1,46 @@
+body {
+	margin: 0 auto;
+}
 
 .topnav {
-	border: 1px solid black;
+	/* border: 1px solid black; */
 	display: flex;
 	justify-content: space-between;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 .leftTopNav, .rightTopNav {
 	display: inline-block;
-	border: 1px solid black;
+	/* border: 1px solid black; */
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	
 }
 
 .leftTopNav {
 	width: 5%;
-
 }
 
 .leftTopNav button, .rightTopNav button {
 	border: none;
-	background: none
-}
-
-
-
-
-
-
-/*
-.leftTopNav {
-	display: inline-block;
-	padding: 10px;
-	border: 1px solid black;
-	
-}
-
-.leftTopNav button {
-	border: none;
 	background: none;
-}
-
-.rightTopNav {
-	float: right;
 	padding: 10px;
-	border: 1px solid black;
 }
 
-.rightTopNav button {
-	border: none;
-	background: none;
-	position: relative;
-	top: -9.5px;
-} */
-
-.apps {
-	padding: 8px;
+.rightTopNav img{ 
+	padding-right: 10px;
 }
+
+.leftTopNav button:hover, .rightTopNav button:hover{
+	cursor: pointer;
+	text-decoration: underline;
+}
+
+.rightTopNav img:hover {
+	cursor: pointer;
+}
+
 
 .container {
 	position: absolute;
@@ -76,16 +59,17 @@
 .searchbar {
 	position: relative;
 	top: 25px;
-	/* border: 1px solid black; */
-
-
-	
 }
 
-#form {
-	border: 1px solid black;
+.searchbar:hover {
+	box-shadow: 0px 0px 5px #A9A9A9;
 	border-radius: 25px;
-	opacity: 0.2;
+} 
+
+
+#form {
+	border: 1px solid #ededed;
+	border-radius: 25px;
 	width: 580px;
 	height: 45px;
 	display: flex;
@@ -100,25 +84,53 @@
 	width: 85%;
 	border: none;
 	outline: none; 	/*removes square outline */
-	padding-left: 30px;
+	padding-left: 15px;
 	font-size: 16px; 
 }
-
 
 .searchbutton {
 	position: relative;
 	top: 50px;
-	/* display: flex; */
-	/* justify-content: space-evenly; */
-	/* border: 1px solid black; */
 	text-align: center;
-
 }
 
 .searchbutton button {
 	font-size: 15px;
 	padding: 10px;
-	margin-left: 3px;
+	margin-left: 5px;
+	border-radius: 5px;
+    background-color: #f8f9fa;
+	border: none;
+   
 }
 
+.searchbutton button:hover {
+	border: 1px solid #dadce0;
+	cursor: pointer;
+}
+
+.botNav {
+	position: fixed;
+	bottom: 0;
+	display: flex;
+	justify-content: space-between;
+	/* border: 1px solid black; */
+	width: 100%;
+	height: 5%; 
+	align-items: center;
+	background-color: #f2f2f2;
+}
+
+.leftBotNav, .rightBotNav {
+	padding: 35px;
+}
+
+.leftBotNav button, .rightBotNav button {
+	border: none;
+	background: none;
+	color: #70757a;
+}
+
+
 	
+
