--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
 }
 
 .topnav {
-	/* border: 1px solid black; */
 	display: flex;
 	justify-content: space-between;
 	padding-left: 10px;
@@ -12,7 +11,6 @@ body {
 
 .leftTopNav, .rightTopNav {
 	display: inline-block;
-	/* border: 1px solid black; */
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -25,11 +23,12 @@ body {
 .leftTopNav button, .rightTopNav button {
 	border: none;
 	background: none;
-	padding: 10px;
+	padding: 15px 4px 0px 16px;
+	font-size: 14px;
 }
 
 .rightTopNav img{ 
-	padding-right: 10px;
+	padding:  15px 4px 0px 16px;
 }
 
 .leftTopNav button:hover, .rightTopNav button:hover{
@@ -47,8 +46,6 @@ body {
 	top: 36%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	/* border: 1px solid black; */
-
 }
 
 .logo {
@@ -114,7 +111,6 @@ body {
 	bottom: 0;
 	display: flex;
 	justify-content: space-between;
-	/* border: 1px solid black; */
 	width: 100%;
 	height: 5%; 
 	align-items: center;
@@ -129,8 +125,14 @@ body {
 	border: none;
 	background: none;
 	color: #70757a;
+	font-size: 14px;
+	padding-right: 18px;
 }
 
+.leftBotNav button:hover, .rightBotNav button:hover{
+	cursor: pointer;
+	text-decoration: underline;
+}
 
 	
 
